# DiscordRPC-rs

./: Cargo.toml
examples/: connect.rs
src/: client.rs  connection.rs  error.rs  lib.rs  message.rs  windows.rs
