[package]
name = "dc_rpc_rs"
version = "0.1.0"
authors = ["Peter Lenkefi <lenkefi.peti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.48"
uuid = { version = "0.8.1", features = ["v4"] }
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["fs", "time", "io-util", "sync", "rt-threaded", "macros"] }
